--- a/client/src/pages/Signup/styles/Signup.css
+++ b/client/src/pages/Signup/styles/Signup.css
@@ -1,10 +1,5 @@
-.LoginForm{
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
-    height: 100vh;
-}
-.loginContainer{
+
+.signupContainer{
     box-sizing: border-box;
     padding: 2rem;
     border-radius: 1rem;
